tests/snippets/dot_variant_in_union/lower.snapshot
# Lower

## tests/snippets/dot_variant_in_union/_main.vader
  fn tests_snippets_dot_variant_in_union__main_vader$parse(c: char) -> Direction | Error
    if :void
      cond:
        eq :bool
          l:
            c#128 :char
          r:
            char(0x4e)
      then:
        return int(0) :i32
    if :void
      cond:
        eq :bool
          l:
            c#128 :char
          r:
            char(0x45)
      then:
        return int(1) :i32
    if :void
      cond:
        eq :bool
          l:
            c#128 :char
          r:
            char(0x53)
      then:
        return int(2) :i32
    if :void
      cond:
        eq :bool
          l:
            c#128 :char
          r:
            char(0x57)
      then:
        return int(3) :i32
    return
      ParseError {
        msg: "unknown" :string
      }
  fn tests_snippets_dot_variant_in_union__main_vader$dir_label(d: Direction) -> string
    ~>
      block :string
        let __scrut_0#-1: Direction = d#129 :Direction
        ~>
          if :string
            cond:
              eq :bool
                l:
                  __scrut_0#-1 :Direction
                r:
                  int(0) :i32
            then:
              ~>
                "N" :string
            else:
              ~>
                if :string
                  cond:
                    eq :bool
                      l:
                        __scrut_0#-1 :Direction
                      r:
                        int(1) :i32
                  then:
                    ~>
                      "E" :string
                  else:
                    ~>
                      if :string
                        cond:
                          eq :bool
                            l:
                              __scrut_0#-1 :Direction
                            r:
                              int(2) :i32
                        then:
                          ~>
                            "S" :string
                        else:
                          ~>
                            if :string
                              cond:
                                eq :bool
                                  l:
                                    __scrut_0#-1 :Direction
                                  r:
                                    int(3) :i32
                              then:
                                ~>
                                  "W" :string
                              else:
                                ~>
                                  unreachable("non-exhaustive match (T3013 should have caught this)") :string
  fn tests_snippets_dot_variant_in_union__main_vader$main() -> i32
    block :void
      let __scrut_0#-2: Direction | Error =
        call :Direction | Error
          callee:
            parse#4 :fn(char) -> Direction | Error
          arg0:
            char(0x4e)
      ~>
        if :void
          cond:
            is Direction :bool
              __scrut_0#-2 :Direction | Error
          then:
            let d#130: Direction =
              cast → Direction
                __scrut_0#-2 :Direction | Error
            ~>
              call :void
                callee:
                  println#28 :fn(Display) -> void
                arg0:
                  call :string
                    callee:
                      to_string#1000014 :string
                    arg0:
                      call :string
                        callee:
                          dir_label#5 :fn(Direction) -> string
                        arg0:
                          d#130 :Direction
          else:
            ~>
              if :void
                cond:
                  is Error :bool
                    __scrut_0#-2 :Direction | Error
                then:
                  ~>
                    call :void
                      callee:
                        println#28 :fn(Display) -> void
                      arg0:
                        call :string
                          callee:
                            to_string#1000014 :string
                          arg0:
                            "err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    block :void
      let __scrut_1#-3: Direction | Error =
        call :Direction | Error
          callee:
            parse#4 :fn(char) -> Direction | Error
          arg0:
            char(0x3f)
      ~>
        if :void
          cond:
            is Direction :bool
              __scrut_1#-3 :Direction | Error
          then:
            let d#131: Direction =
              cast → Direction
                __scrut_1#-3 :Direction | Error
            ~>
              call :void
                callee:
                  println#28 :fn(Display) -> void
                arg0:
                  call :string
                    callee:
                      to_string#1000014 :string
                    arg0:
                      call :string
                        callee:
                          dir_label#5 :fn(Direction) -> string
                        arg0:
                          d#131 :Direction
          else:
            ~>
              if :void
                cond:
                  is Error :bool
                    __scrut_1#-3 :Direction | Error
                then:
                  ~>
                    call :void
                      callee:
                        println#28 :fn(Display) -> void
                      arg0:
                        call :string
                          callee:
                            to_string#1000014 :string
                          arg0:
                            "err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    return int(0) :i32
